--- a/CNDAEmail.vbproj
+++ b/CNDAEmail.vbproj
@@ -304,6 +304,16 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CNDAPowerPoint\CNDAPowerPoint.vbproj">
+      <Project>{c78213cf-e34e-4aea-8890-669fcd28ddcf}</Project>
+      <Name>CNDAPowerPoint</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CndaUtils\CndaUtils.vbproj">
+      <Project>{7dc76afe-d100-4b48-95b7-4a7c6bd34550}</Project>
+      <Name>CndaUtils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
