--- a/CndaOutlook.vbproj
+++ b/CndaOutlook.vbproj
@@ -25,7 +25,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>CNDAEmail</RootNamespace>
     <AssemblyName>CNDAEmail</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <DefineConstants>VSTO40</DefineConstants>
     <StartupObject>
     </StartupObject>
@@ -45,6 +45,7 @@
     <FriendlyName>CNDAEmail</FriendlyName>
     <OfficeApplicationDescription>Generates an Outlook email that includes a PDF that is generated from a PPT that conforms to the Intel CNDA watermark requriements.</OfficeApplicationDescription>
     <LoadBehavior>3</LoadBehavior>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -200,7 +201,6 @@
     <Import Include="System.Xml.Linq" />
     <Import Include="Office = Microsoft.Office.Core" />
     <Import Include="Outlook = Microsoft.Office.Interop.Outlook" />
-    <Import Include="Windows = System.Windows" />
   </ItemGroup>
   <!--
     This section defines the user source files that are part of the project.
