--- a/CNDAPowerPoint/My Project/Settings.settings
+++ b/CNDAPowerPoint/My Project/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" UseMySettingsClassName="true">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="" GeneratedClassName="MySettings" UseMySettingsClassName="true">
+  <Profiles />
+  <Settings>
+    <Setting Name="CNDARegEx" Type="System.String" Scope="User">
+      <Value Profile="(Default)">CNDA#+</Value>
+    </Setting>
+    <Setting Name="CNDACustMatch" Type="System.String" Scope="User">
+      <Value Profile="(Default)">CustName</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
