Feature - added default email folder in settings.

--- a/CndaOutlook.vbproj
+++ b/CndaOutlook.vbproj
@@ -30,11 +30,12 @@
     <StartupObject>
     </StartupObject>
     <IsWebBootstrapper>False</IsWebBootstrapper>
+    <TargetFrameworkProfile />
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <PublishUrl>C:\Users\Nick\Documents\Development\CNDAEmailDvd\</PublishUrl>
     <InstallUrl />
     <TargetCulture>en</TargetCulture>
-    <ApplicationVersion>1.0.0.3</ApplicationVersion>
+    <ApplicationVersion>1.0.0.4</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateInterval>0</UpdateInterval>
@@ -45,9 +46,13 @@
     <FriendlyName>CNDAEmail</FriendlyName>
     <OfficeApplicationDescription>Generates an Outlook email that includes a PDF that is generated from a PPT that conforms to the Intel CNDA watermark requriements.</OfficeApplicationDescription>
     <LoadBehavior>3</LoadBehavior>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5 SP1</ProductName>
@@ -215,10 +220,10 @@
   -->
   <ItemGroup>
     <AppDesigner Include="My Project\" />
-    <Compile Include="GetFileDialog.Designer.vb">
-      <DependentUpon>GetFileDialog.vb</DependentUpon>
+    <Compile Include="CndaOutlookGetFileDialog.Designer.vb">
+      <DependentUpon>CndaOutlookGetFileDialog.vb</DependentUpon>
     </Compile>
-    <Compile Include="GetFileDialog.vb">
+    <Compile Include="CndaOutlookGetFileDialog.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CNDAExportAndEmail.Designer.vb">
@@ -230,12 +235,13 @@
     <Compile Include="ThisAddIn.vb">
       <SubType>Code</SubType>
     </Compile>
-    <EmbeddedResource Include="GetFileDialog.resx">
-      <DependentUpon>GetFileDialog.vb</DependentUpon>
+    <EmbeddedResource Include="CndaOutlookGetFileDialog.resx">
+      <DependentUpon>CndaOutlookGetFileDialog.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CNDAExportAndEmail.resx">
       <DependentUpon>CNDAExportAndEmail.vb</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="CNDAEmail_TemporaryKey.pfx" />
     <None Include="ThisAddIn.Designer.xml">
       <DependentUpon>ThisAddIn.vb</DependentUpon>
@@ -353,7 +359,7 @@
       <FlavorProperties GUID="{BAA0C2D2-18E2-41B9-852F-F413020CAA33}">
         <ProjectProperties HostName="Outlook" HostPackage="{29A7B9D7-A7F1-4328-8EF0-6B2D1A56B2C1}" OfficeVersion="15.0" VstxVersion="4.0" ApplicationType="Outlook" Language="vb" TemplatesPath="" DebugInfoExeName="#Software\Microsoft\Office\16.0\Outlook\InstallRoot\Path#outlook.exe" AddItemTemplatesGuid="{5D898164-AEB5-470F-97BA-9253F022FD71}" />
         <Host Name="Outlook" PublishedHash="69C324AB27932AA2FBF2B7EA72250886FF164DE6" IconIndex="0">
-          <HostItem Name="ThisAddIn" Code="ThisAddIn.vb" CanonicalName="AddIn" PublishedHash="341B421006973DA6ECFF9E7771C273C5532C588D" CanActivate="false" IconIndex="1" Blueprint="ThisAddIn.Designer.xml" GeneratedCode="ThisAddIn.Designer.vb" />
+          <HostItem Name="ThisAddIn" Code="ThisAddIn.vb" CanonicalName="AddIn" PublishedHash="097D042D33F55A3A3980D4AB7E40C018B0D94DAF" CanActivate="false" IconIndex="1" Blueprint="ThisAddIn.Designer.xml" GeneratedCode="ThisAddIn.Designer.vb" />
         </Host>
       </FlavorProperties>
     </VisualStudio>
