--- a/CNDAPowerPoint/CNDAPowerPoint.vbproj
+++ b/CNDAPowerPoint/CNDAPowerPoint.vbproj
@@ -220,6 +220,7 @@
     <Compile Include="ThisAddIn.vb">
       <SubType>Code</SubType>
     </Compile>
+    <None Include="app.config" />
     <None Include="CNDAPowerPoint_TemporaryKey.pfx" />
     <None Include="ThisAddIn.Designer.xml">
       <DependentUpon>ThisAddIn.vb</DependentUpon>
