--- a/CNDAPowerPoint/My Project/Settings.settings
+++ b/CNDAPowerPoint/My Project/Settings.settings
@@ -2,10 +2,10 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="" GeneratedClassName="MySettings" UseMySettingsClassName="true">
   <Profiles />
   <Settings>
-    <Setting Name="CNDARegEx" Type="System.String" Scope="User">
+    <Setting Name="CNDARegEx" Description="CNDA number regular expression search string" Type="System.String" Scope="User">
       <Value Profile="(Default)">CNDA#+</Value>
     </Setting>
-    <Setting Name="CNDACustMatch" Type="System.String" Scope="User">
+    <Setting Name="CNDACustMatch" Description="Customer name search string" Type="System.String" Scope="User">
       <Value Profile="(Default)">CustName</Value>
     </Setting>
   </Settings>
