--- a/app.config
+++ b/app.config
@@ -29,8 +29,11 @@
     </system.diagnostics>
     <userSettings>
         <CNDAEmail.MySettings>
-            <setting name="MailFolder" serializeAs="String">
-                <value>olFolderDrafts</value>
+            <setting name="MailFolderId" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="XlsFileName" serializeAs="String">
+                <value>&lt;xls filename&gt;</value>
             </setting>
         </CNDAEmail.MySettings>
     </userSettings>
