--- a/CndaOutlook.vbproj
+++ b/CndaOutlook.vbproj
@@ -220,6 +220,12 @@
   -->
   <ItemGroup>
     <AppDesigner Include="My Project\" />
+    <Compile Include="CndaOutlookEmaiOnlyForm.Designer.vb">
+      <DependentUpon>CndaOutlookEmaiOnlyForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CndaOutlookEmaiOnlyForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CndaOutlookGetFileDialog.Designer.vb">
       <DependentUpon>CndaOutlookGetFileDialog.vb</DependentUpon>
     </Compile>
@@ -235,6 +241,9 @@
     <Compile Include="ThisAddIn.vb">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="CndaOutlookEmaiOnlyForm.resx">
+      <DependentUpon>CndaOutlookEmaiOnlyForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CndaOutlookGetFileDialog.resx">
       <DependentUpon>CndaOutlookGetFileDialog.vb</DependentUpon>
     </EmbeddedResource>
