--- a/CndaUtils/CndaBaseClasses.vbproj
+++ b/CndaUtils/CndaBaseClasses.vbproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="CndaAllInfo.vb" />
     <Compile Include="CndaInfo.vb" />
+    <Compile Include="CndaXmlModule.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
