--- a/CndaUtils/CndaBaseClasses.vbproj
+++ b/CndaUtils/CndaBaseClasses.vbproj
@@ -64,9 +64,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CndaCustData.vb" />
     <Compile Include="CndaEditPair.vb" />
     <Compile Include="CndaAllInfo.vb" />
-    <Compile Include="CndaInfo.vb" />
+    <Compile Include="CndaCustInfo.vb" />
+    <Compile Include="CndaMailListItem.vb" />
     <Compile Include="CndaXmlModule.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
