--- a/app.config
+++ b/app.config
@@ -32,8 +32,8 @@
             <setting name="MailFolderId" serializeAs="String">
                 <value />
             </setting>
-            <setting name="XlsFileName" serializeAs="String">
-                <value>&lt;xls filename&gt;</value>
+            <setting name="XmlFileName" serializeAs="String">
+                <value />
             </setting>
         </CNDAEmail.MySettings>
     </userSettings>
