--- a/CNDAPowerPoint/CNDAPowerPoint.vbproj
+++ b/CNDAPowerPoint/CNDAPowerPoint.vbproj
@@ -203,6 +203,12 @@
   -->
   <ItemGroup>
     <AppDesigner Include="My Project\" />
+    <Compile Include="CndaInfoForm.Designer.vb">
+      <DependentUpon>CndaInfoForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CndaInfoForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CNDAPowerPointRibbon.Designer.vb">
       <DependentUpon>CNDAPowerPointRibbon.vb</DependentUpon>
     </Compile>
@@ -229,6 +235,9 @@
       <DependentUpon>ThisAddIn.Designer.xml</DependentUpon>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
+    <EmbeddedResource Include="CndaInfoForm.resx">
+      <DependentUpon>CndaInfoForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CNDAPowerPointRibbon.resx">
       <DependentUpon>CNDAPowerPointRibbon.vb</DependentUpon>
     </EmbeddedResource>
@@ -264,6 +273,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Examples\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="sample.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
