--- a/CNDAPowerPoint/app.config
+++ b/CNDAPowerPoint/app.config
@@ -29,11 +29,8 @@
     </system.diagnostics>
     <userSettings>
         <CNDAPowerPoint.MySettings>
-            <setting name="CNDARegEx" serializeAs="String">
-                <value>CNDA#+</value>
-            </setting>
-            <setting name="CNDACustMatch" serializeAs="String">
-                <value>CustName</value>
+            <setting name="XmlFilename" serializeAs="String">
+                <value />
             </setting>
         </CNDAPowerPoint.MySettings>
     </userSettings>
