--- a/app.config
+++ b/app.config
@@ -33,7 +33,7 @@
                 <value />
             </setting>
             <setting name="XmlFileName" serializeAs="String">
-                <value />
+                <value>C:\Users\Nick\Documents\Development\samplewitharray.xml</value>
             </setting>
         </CNDAEmail.MySettings>
     </userSettings>
