--- a/CNDAPowerPoint/app.config
+++ b/CNDAPowerPoint/app.config
@@ -29,8 +29,8 @@
     </system.diagnostics>
     <userSettings>
         <CNDAPowerPoint.MySettings>
-            <setting name="XmlFilename" serializeAs="String">
-                <value />
+            <setting name="PptXmlFilename" serializeAs="String">
+                <value>C:\Users\Nick\Documents\Development\samplewitharray.xml</value>
             </setting>
         </CNDAPowerPoint.MySettings>
     </userSettings>
