--- a/CndaOutlook.vbproj
+++ b/CndaOutlook.vbproj
@@ -363,6 +363,9 @@
   <PropertyGroup>
     <ManifestCertificateThumbprint>0E2E0C1F30F59780AEF5EAC6C7A60942126A12B6</ManifestCertificateThumbprint>
   </PropertyGroup>
+  <PropertyGroup>
+    <MyType>Windows</MyType>
+  </PropertyGroup>
   <!-- Include the build rules for a Visual Basic project. -->
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- Include additional build rules for an Office application add-in. -->
